# xidlehook-caffeine

./: .gitignore  README.md  flake.nix  pyproject.toml
xidlehook_caffeine/: __init__.py  main.py
