[tool.poetry]
name = "xidlehook-caffeine"
version = "0.1.0"
description = "A script to pause and unpause xidlehook processes"
authors = ["MOIS3Y <stepan@zhukovsky.me>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/MOIS3Y/xidlehook-caffeine"
keywords = ["xidlehook", "caffeine", "lockscreen"]
include = ["CHANGELOG.md"]
readme = "README.md"
packages = [{include = "xidlehook_caffeine"}]


[tool.poetry.dependencies]
python = "^3.10"
psutil = "^7.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"


[tool.poetry.scripts]
xidlehook-caffeine = "xidlehook_caffeine.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
